modules/vpc/main.tf
locals {
    cluster_tags = {
        environment = "production"
        managed_by = "terraform"
    }
}

resource "aws_vpc" "main" {
    cidr_block = var.cidr_block
    enable_dns_hostnames = true
    enable_dns_support = true
    tags = merge(local.cluster_tags, {Name = "baseline-vpc"})
}

resource "aws_subnet" "private" {
    count  = length(var.private_subnets_cidr_blocks)
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnets_cidr_blocks[count.index]
    availability_zone = var.availability_zones[count.index]
    tags = merge(local.cluster_tags, {Name = "private-subnet-${count.index}"})  
}

resource "aws_subnet" "public" {
    count = length(var.public_subnets_cidr_blocks)
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnets_cidr_blocks[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true
    tags = merge(local.cluster_tags, {Name = "public-subnet-${count.index}"})  
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = merge(local.cluster_tags, {Name = "internet-gateway"})
}

resource "aws_eip" "nat" {
    domain = "vpc"
    tags = merge(local.cluster_tags, {Name = "nat-eip"})
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public[0].id
    tags = merge(local.cluster_tags, {Name = "nat-gateway"})
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
    tags = merge(local.cluster_tags, {Name = "public-route-table"})
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }
    tags = merge(local.cluster_tags, {Name = "private-route-table"})
}

resource "aws_route_table_association" "public" {
    count = length(var.public_subnets_cidr_blocks)
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    count = length(var.private_subnets_cidr_blocks)
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}
